BPER/DEVF/force-app/main/default/objects/IterConfiguration__c/IterConfiguration__c.object-meta.xml
<CustomObject>
    <label>Iter Configuration</label>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>Iter Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Iter Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>