BPER/DEVF/force-app/main/default/objects/IterConfiguration__c/fields/Abi__c.field-meta.xml
<CustomField>
    <fullName>Abi__c</fullName>
    <formula>UnitaOrganizzativa__r.FinServ__BankNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abi</label>
    <type>Text</type>
</CustomField>