BPER/DEVF/force-app/main/default/objects/IterConfiguration__c/fields/GiorniAnnullamento__c.field-meta.xml
<CustomField>
    <fullName>GiorniAnnullamento__c</fullName>
    <label>Giorni Annullamento</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>