BPER/DEVF/force-app/main/default/objects/IterConfiguration__c/fields/TipoSpostamento__c.field-meta.xml
<CustomField>
    <fullName>TipoSpostamento__c</fullName>
    <label>Tipo Spostamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDS</fullName>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
            <value>
                <fullName>MDS / Filiale</fullName>
            </value>
            <value>
                <fullName>Referenti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>