BPER/DEVF/force-app/main/default/objects/IterConfiguration__c/fields/UnitaOrganizzativa__c.field-meta.xml
<CustomField>
    <fullName>UnitaOrganizzativa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unità Organizzativa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Iter Configurations</relationshipLabel>
    <relationshipName>IterConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>